--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -10,9 +10,7 @@
       form input { border: 0; padding: 10px; width: 80%; margin-right: .5%; }
       form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px; }
       #video{ background: rgb(0, 0, 0); border: none; padding: 10px;margin: 0px 0px 10px 50px;  }
-      .scrollview{width: 100%;
-  
-    padding: 20px;height: 400px;overflow-y: scroll;      }
+      .scrollview{height: 400px;overflow-y: scroll;      }
          #video2{ background: white; border: none; padding: 0px; margin: 0px 0px 10px 500px; }
       #messages { list-style-type: none; margin: 0; padding: 0; }
       #messages li { padding: 5px 10px; }
@@ -33,12 +31,16 @@
 <h1 id="n" hidden> <%=JSON.stringify(room)%> </h1>
  <h1 id="o" hidden> <%=JSON.stringify(otheruser)%> </h1>    
  <h1 id="j" hidden> <%=JSON.stringify(user)%> </h1>  
+ <p id="stun" hidden><%=JSON.stringify(stun)%></p>
+  <p id="turn" hidden><%=JSON.stringify(turn)%></p>
+    <p id="cred" hidden><%=JSON.stringify(cred)%></p>
+     <p id="iceuser" hidden><%=JSON.stringify(iceuser)%></p>
  <div class="scrollview">
     <ul id="messages" >
        
       
     <%messages.forEach(function(msg){%>
-        <li class="ui large header " style=" width: 500px;">
+        <li class="ui large header width: 100%;">
           <span>
             <%=msg.handle%>
             <span>:</span>
@@ -47,7 +49,7 @@
           </span>
               <%=msg.message%>  
                <!--<%=msg.handle%>-->
-            <div style="text-align: right;  width: 500px;"><h5><%=msg.timestamp%></h5></div>    
+            <div style="text-align: right;  "><h5><%=msg.timestamp%></h5></div>    
         </li>
      
         
@@ -67,71 +69,79 @@
   <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
   <script>
 
-//   function func(){
+  function func(){
     
-//   var name = JSON.parse($('#n').text());
-//   var socket = io('',{query: 'room='+name});
-//   var user = JSON.parse($('#u').text());
-//   var id = JSON.parse($('#j').text());
-//     var otheruser = JSON.parse($('#o').text());
-//     var call_room = name+otheruser;
-//   var vid_room= name+id;
+  var name = JSON.parse($('#n').text());
+  var socket = io('',{query: 'room='+name});
+  var user = JSON.parse($('#u').text());
+  var id = JSON.parse($('#j').text());
+    var otheruser = JSON.parse($('#o').text());
+    var stun = JSON.parse($('#stun').text());
+  var turn = JSON.parse($('#turn').text());
+  var cred = JSON.parse($('#cred').text());
+  var iceuser = JSON.parse($('#iceuser').text());
+    var call_room = name+otheruser;
+  var vid_room= name+id;
  
-//   var video= document.getElementById('video')
-//   var video2= document.getElementById('video2')
-//   var answer= document.getElementById('answer')
-//     var videoicon= document.getElementById('videoicon')
+  var video= document.getElementById('video')
+  var video2= document.getElementById('video2')
+  var answer= document.getElementById('answer')
+    var videoicon= document.getElementById('videoicon')
 
-// var peer = new Peer(vid_room)
+var peer = new Peer(vid_room,{ config: {'iceServers': [
+    { url: stun },
+    { url: turn, credential: cred,username:iceuser }
+  ]} /* Sample servers, please use appropriate ones */
+})
 
-//     var conn = peer.connect(call_room);
-//     // on open will be launch when you successfully connect to PeerServer
-//     conn.on('open', function(err){
-//       if (err) console.log(err);
-//       // here you have conn.id
-//       console.log('made it here');
-//       conn.send('hi!');
+    var conn = peer.connect(call_room);
+    // on open will be launch when you successfully connect to PeerServer
+    conn.on('open', function(err){
+      if (err) console.log(err);
+      // here you have conn.id
+      console.log('made it here');
+      conn.send('hi!');
       
       
-//       videoicon.style.backgroundColor = "red";
-//     });
+      videoicon.style.backgroundColor = "red";
+    });
 
-//     peer.on('connection', function(conn) {
-//       conn.on('data', function(data){
-//         // Will print 'hi!'
-//             videoicon.style.backgroundColor = "red";
-//         console.log(data);
-//       });
-//     });
+    peer.on('connection', function(conn) {
+      conn.on('data', function(data){
+        // Will print 'hi!'
+            videoicon.style.backgroundColor = "red";
+        console.log(data);
+      });
+    });
     
-// navigator.getUserMedia = navigator.getUserMedia || navigator.webkitGetUserMedia || navigator.mozGetUserMedia;
-//   navigator.getUserMedia({video: true, audio: true}, function(stream) {
-//     var call = peer.call(call_room, stream);
-//     call.on('stream', function(remoteStream) {
-//       video.srcObject=remoteStream;
-// videoicon.style.backgroundColor = "red";
+navigator.getUserMedia = navigator.getUserMedia || navigator.webkitGetUserMedia || navigator.mozGetUserMedia;
+  navigator.getUserMedia({video: true, audio: true}, function(stream) {
+    var call = peer.call(call_room, stream);
+    call.on('stream', function(remoteStream) {
+      video.srcObject=remoteStream;
+videoicon.style.backgroundColor = "red";
    
-//     });
-//   }, function(err) {
-//     console.log('Failed to get local stream' ,err);
-//   });
+    });
+  }, function(err) {
+    console.log('Failed to get local stream' ,err);
+  });
 
-//   navigator.getUserMedia = navigator.getUserMedia || navigator.webkitGetUserMedia || navigator.mozGetUserMedia;
-//   peer.on('call', function(call) {
-//     navigator.getUserMedia({video: true, audio: true}, function(stream) {
-//       call.answer(stream); // Answer the call with an A/V stream.
-//       call.on('stream', function(remoteStream) {
-//         video.srcObject=remoteStream;
-//         videoicon.style.backgroundColor = "red";
-//       });
-//     }, function(err) {
-//       console.log('Failed to get local stream' ,err);
-//     });
-//   });
+  navigator.getUserMedia = navigator.getUserMedia || navigator.webkitGetUserMedia || navigator.mozGetUserMedia;
+  peer.on('call', function(call) {
+    navigator.getUserMedia({video: true, audio: true}, function(stream) {
+      call.answer(stream); // Answer the call with an A/V stream.
+      call.on('stream', function(remoteStream) {
+        video.srcObject=remoteStream;
+        videoicon.style.backgroundColor = "red";
+      });
+    }, function(err) {
+      console.log('Failed to get local stream' ,err);
+    });
+  });
   
   
      
-  // }
+  }
   
     $(function () {
        var name = JSON.parse($('#n').text());
@@ -153,13 +163,12 @@
       socket.on('chat message', function(msg){
         // $( "#nm" ).remove();
         var date=new Date().toLocaleString().split(',').join("");
-        var txt = '<li   class="ui large header" style=" width: 500px;">'+ msg[2]+  " : " + msg[0] + '<div id="date" style=" width: 500px; text-align: right;"><h5>'+date + "</h5></div>" +"</li>"
+        var txt = '<li   class="ui large header"  style="width: 100%;">'+ msg[2]+  " : " + msg[0] + '<div id="date" style="  text-align: right;"><h5>'+date + "</h5></div>" +"</li>"
         console.log(txt);
         $('#messages').append(txt);
         // $('#nm').append($('<div id="date" class="ui tiny header">').text();
         
         console.log("chatuser"+user);
-          $('#messages').animate({scrollTop: $('#messages').prop("scrollHeight")}, 500);
       });
     });
   </script>
