--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -99,6 +99,10 @@ var peer = new Peer(vid_room,{ config: {'iceServers': [
     conn.on('open', function(err){
       if (err) console.log(err);
       // here you have conn.id
+      navigator.getUserMedia = navigator.getUserMedia || navigator.webkitGetUserMedia || navigator.mozGetUserMedia;
+        navigator.getUserMedia({video: true, audio: true}, function(stream) {
+          video2.srcObject=remoteStream;
+        });
       console.log('made it here');
       conn.send('hi!');
       
