--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -100,6 +100,9 @@ var peer = new Peer(vid_room,{ config: {'iceServers': [
         }, function(err) {
     console.log('Failed to get local stream' ,err);
   });
+  
+    socket.emit('video', "" );
+      socket.on('video', function(msg){ videoicon.style.backgroundColor = "red";});
     var conn = peer.connect(call_room);
     // on open will be launch when you successfully connect to PeerServer
     conn.on('open', function(err){
