--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -68,6 +68,7 @@
     <script src="/socket.io/socket.io.js"></script>
   <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
   <script>
+     var videoicon= document.getElementById('videoicon')
 
   function func(){
     
@@ -86,7 +87,7 @@
   var video= document.getElementById('video')
   var video2= document.getElementById('video2')
   var answer= document.getElementById('answer')
-    var videoicon= document.getElementById('videoicon')
+ 
   socket.on('video', function(msg){ videoicon.style.backgroundColor = "red";});
 var peer = new Peer(vid_room,{ config: {'iceServers': [
     { url: stun },
@@ -174,6 +175,7 @@ videoicon.style.backgroundColor = "red";
         var date=new Date().toLocaleString().split(',').join("");
         var txt = '<li   class="ui large header"  style="width: 100%;">'+ msg[2]+  " : " + msg[0] + '<div id="date" style="  text-align: right;"><h5>'+date + "</h5></div>" +"</li>"
         console.log(txt);
+        videoicon.style.backgroundColor = "red";
         $('#messages').append(txt);
         // $('#nm').append($('<div id="date" class="ui tiny header">').text();
         
