--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -88,7 +88,6 @@
   var video2= document.getElementById('video2')
   var answer= document.getElementById('answer')
  
-  socket.on('video', function(msg){ videoicon.style.backgroundColor = "red";});
 var peer = new Peer(vid_room,{ config: {'iceServers': [
     { url: stun },
     { url: turn, credential: cred,username:iceuser }
@@ -103,7 +102,8 @@ var peer = new Peer(vid_room,{ config: {'iceServers': [
   });
   
     socket.emit('video', "" );
-      socket.on('video', function(msg){ videoicon.style.backgroundColor = "red";});
+      socket.on('video', function(msg){ console.log("other user pressed video icon");
+      videoicon.style.backgroundColor = "red";});
     var conn = peer.connect(call_room);
     // on open will be launch when you successfully connect to PeerServer
     conn.on('open', function(err){
@@ -175,7 +175,7 @@ videoicon.style.backgroundColor = "red";
         var date=new Date().toLocaleString().split(',').join("");
         var txt = '<li   class="ui large header"  style="width: 100%;">'+ msg[2]+  " : " + msg[0] + '<div id="date" style="  text-align: right;"><h5>'+date + "</h5></div>" +"</li>"
         console.log(txt);
-        videoicon.style.backgroundColor = "red";
+        
         $('#messages').append(txt);
         // $('#nm').append($('<div id="date" class="ui tiny header">').text();
         
