--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -68,10 +68,10 @@
     <script src="/socket.io/socket.io.js"></script>
   <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
   <script>
-    var socket; 
+  
   function foo(){
      var videoicon= document.getElementById('videoicon')
-    socket= io('',{query: 'room='+name});
+     var socket= socket= io('',{query: 'room='+name});
     socket.on('chat message', function(msg){
         // $( "#nm" ).remove();
         var date=new Date().toLocaleString().split(',').join("");
