--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -174,6 +174,7 @@ videoicon.style.backgroundColor = "red";
   
   
     $(function () {
+          var socket= socket= io('',{query: 'room='+name});
        var name = JSON.parse($('#n').text());
     
         var user = JSON.parse($('#u').text());;
