--- a/views/instructions.ejs
+++ b/views/instructions.ejs
@@ -12,6 +12,9 @@
         <link rel="stylesheet" type="text/css" href="/stylesheet/signup.css">
     
     </head>
+    <body style="  height: 100%;
+    overflow: hidden;
+    padding-top: 100px;  overflow: hidden;">
        
    <nav class="navbar navbar-default navbar-fixed-top" style="background-color:	#F0E68C;">
     <div class="container">
@@ -23,34 +26,38 @@
            
           
        
-		<h1 class="brand brand-name navbar-left"><div class"navbar-left"><a href="/" style="color:black">Elite Consorts</a></h1>
+		<h1 class="brand brand-name navbar-left"><div class"navbar-left">Elite Consorts</h1>
         </div>
         <div class="collapse navbar-collapse navbar-right" id="myNavbar">
             <ul class="nav navbar-nav">
-                <li><a href="/instructions">Know the difference between Premium and Regular</a></li>
+                <li><a href="/userprofiles/new">Back to Sign Up</a></li>
    			
     	
             </ul>
         </div>
     </div>
 </nav>
-<body style="font-family: 'Lato', sans-serif;">
-<div style=" width:200px;
-      height:200px;
+<div style="
+     
       position: fixed;
       
-      top: 50%;
-      left: 50%;
-      margin-top: -100px;
-      margin-left: -100px;">
-          <% include partials/messages %>
-    <a  href="/newprem" class="ui container inverted red button" style="margin:50px;">
-        Become a Premium Member 
-    </a>
-    <a  href="/newreg" class="ui container inverted violet button"style="margin:auto;" >
-        Become a Regular Member
-    </a>
+    margin:0 auto;
+      background-color:white;">
     
+    <div class="ui medium header">Premium+ Members enjoy the same benefits as Premium Members, but receive extra perks in addition:
+
+You will receive free shipping on select items in the Crunchyroll Store.
+You receive access to special Premium+ only events at conventions.
+In the future, beta access for new site features will be available for Premium+ members.
+More Premium+ benefits are on the way! Stay tuned for announcements!
+To find costs and differences between plans check out the Plan Comparison page here.
+
+To find more FAQ’s and knowledge base questions and answers, access the rest of our knowledge base.
+To check out the forums, find shared answers from other users, or post a question about shows and other interests, check out Crunchyroll forums.
+If you still need further help, need something changed regarding your account, or would like to contact us directly, please contact us with the details.</div>
     
 </div> 
 
+
+
+<% include partials/footer %>
