--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -28,7 +28,9 @@
               <li><a href="/userprofiles/new">
                SignUp
             </a></li>
-           
+            <li><a href="/logout">
+              LogOut
+            </a></li>
         </ul>
         </div>
     </div>
