--- a/public/stylesheet/landing.css
+++ b/public/stylesheet/landing.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url('landing.png');
+  background-image: url('2.JPG');
   background-repeat: no-repeat;
 
   background-size: cover;
