--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -389,7 +389,7 @@
         <div class="col-lg-8 col-lg-offset-2">
           <div class="wow flipInY" data-wow-offset="0" data-wow-delay="0.4s">
             <div class="section-heading text-center">
-              <h2 class="h-bold">Contact us</h2>
+              <h2 class="h-bold">Contact Us</h2>
               <div class="divider-header"></div>
               <p>Send us an email so that we can reach you</p>
             </div>
