--- a/views/newprem.ejs
+++ b/views/newprem.ejs
@@ -57,11 +57,12 @@
         <input class="form-control" type="text" name="email" placeholder="email" required>
       </div>
        <div class="ui input">
-            <select class="ui form-group dropdown" name="bodytype" placeholder="bodytype" type="text" required>
-              <option value="default">Ectomorph</option>
-              <option value="Endomorph">Endomorph</option>
-              <option value="Mesomorph ">Mesomorph </option>
-           
+            <select class="ui form-group dropdown" name="sexuality" placeholder="sexuality" type="text" required>
+              <option value="default">Normal</option>
+              <option value="Bi">Bi</option>
+              <option value="Trans">Trans</option>
+             <option value="Post ">Post</option>
+               <option value="Ops">Ops</option>
             </select>
      </div>
     
@@ -87,9 +88,34 @@
               <option value="Black">Black</option>
             </select>
      </div>
-    <div class="form-group">
-         <input class="form-control" type="text" name="height"  placeholder="height(in cm)">
-         
+   <div>
+            <select class="ui form-group dropdown" name="feet" id="feet" placeholder="feet" type="number" required>
+              <option value=0>Feet</option>
+              <option value=1>1</option>
+              <option value=2>2</option>
+               <option value=3>3</option>
+              <option value=4>4</option>
+              <option value=5>5</option>
+              <option value=6>6</option>
+              <option value=7>7</option>
+              <option value=8>8</option>
+            </select>
+               <select class="ui form-group dropdown" name="inch" id="inch" placeholder="inch" type="number" required>
+              <option value=0>Inch</option>
+            <option value=1>1</option>
+              <option value=2>2</option>
+               <option value=3>3</option>
+              <option value=4>4</option>
+              <option value=5>5</option>
+              <option value=6>6</option>
+              <option value=7>7</option>
+              <option value=8>8</option>
+              <option value=9>9</option>
+              <option value=10>10</option>
+              <option value=11>11</option>
+              <option value=12>12</option>
+            </select>
+            
      </div>
       <div class="form-group">
          <input class="form-control" type="text" name="zip"  placeholder="zip">
