--- a/views/groom.ejs
+++ b/views/groom.ejs
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700,400italic|Source+Code+Pro:400,700' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700,400italic|Source+Code+Pro:400,700' rel='stylesheet' type='text/css'>
 
 <div class="post">
 	 
