--- a/views/instructions.ejs
+++ b/views/instructions.ejs
@@ -25,8 +25,7 @@
             </button>
            
           
-       
-		<h1 class="brand brand-name navbar-left"><div class"navbar-left">Elite Consorts</h1>
+       			<h1 class="brand brand-name navbar-left"><div class"navbar-left"><a href="/" style="color:black">Elite Consorts</a></h1>
         </div>
         <div class="collapse navbar-collapse navbar-right" id="myNavbar">
             <ul class="nav navbar-nav">
