--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -13,7 +13,7 @@
     </head>
 <body style="font-family: 'Lato', sans-serif;">
     
-    <nav class="navbar navbar-default" style="background-image: linear-gradient(to left, rgba(100,0,0,0), rgba(100,0,0,1));">
+  <nav class="navbar navbar-default navbar-fixed-top" style=" background-color:	#F0E68C;   ">
     
     <div class="container-fluid">
         <div class="navbar-header">
@@ -22,18 +22,14 @@
    
     <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav navbar-right">
-            <li><a href="/users/login">
-               LogIn
-            </a></li>
-              <li><a href="/userprofiles/new">
-               SignUp
-            </a></li>
-            <li><a href="/logout">
-              LogOut
-            </a></li>
+         
         </ul>
         </div>
     </div>
 </nav>
 
-  
+
+  <div style="padding-bottom: 50px;">
+    
+    
+</div>
