--- a/views/partials/header2.ejs
+++ b/views/partials/header2.ejs
@@ -11,27 +11,31 @@
         <!--<link rel="stylesheet" type="text/css" href="/stylesheet/landing.css">-->
       
     </head>
-<body style="font-family: 'Lato', sans-serif; color:black;" onhashchange="hashHandler();">
-    <div>
-    <nav class="navbar navbar-default" style=" background-image: linear-gradient(to left, rgba(100,0,0,0), rgba(100,0,0,1));">
+<body style="font-family: 'Lato', sans-serif; color:black;">
+    <div >
+    <nav class="navbar navbar-default navbar-fixed-top" style=" background-color:	#F0E68C;   ">
     
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand" style="font-size:20px; font-weight:900; color:grey;" href="/userprofiles">Profile</a>
+            <a class="navbar-brand" style="font-size:20px; font-weight:900; color:black;" href="/cuser">Profile</a>
         </div>
    
     <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav navbar-right">
-            <li><a href="" style="font-size:20px; font-weight:900; color:grey;">
+            <li><a href="" style="font-size:20px; font-weight:900; color:black;">
                LoggedIn
             </a></li>
-            <li><a href="/logout" style="font-size:20px; font-weight:900; color:grey;">
+            <li><a href="/logout" style="font-size:20px; font-weight:900; color:black;">
               LogOut
             </a></li>
         </ul>
         </div>
     </div>
 </nav>
+<div style="padding-bottom: 100px;">
+    
+    
+</div>
 
 
   
