--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -115,7 +115,7 @@
                   <li><a href="#about">About Us</a></li>
                   <li><a href="#service">Services</a></li>
                   <li><a href="#works">Samples</a></li>
-
+ <li><a href="/freetour">*Freetour</a></li>
                   <li><a href="/users/login">LogIn</a></li>
             <li><a href="/userprofiles/new">Sign Up</a></li>
                 </ul>
