--- a/views/userprofiles.ejs
+++ b/views/userprofiles.ejs
@@ -86,7 +86,7 @@
             </select>
                <select class="ui form-group dropdown" name="height" placeholder="height" type="text">
               <option value="default">Height</option>
-              <option value=152>Above 5 feet</option>
+              <option value=152>Above 5'</option>
               <option value=165>Above 5'5"</option>
                <option value=173>Above 5'8"<option>
               <option value=183>Above 6'</option>
@@ -114,14 +114,7 @@
              <div class="ui medium header">Bodytype: <span ><%=currentuser.bodytype%></span></div>
              
        </div>
-       <div class="container">
-            <form action="/update/" method="GET">
-         <button type="submit" style="margin:10px 0px auto">Update Info</button>
-      </form>
-          <form action="/uploads/" method="GET">
-         <button type="submit" style="margin:10px 0px auto">See Your Photos</button>
-      </form>
-       </div>
+     
   </div>
   <div class="ten wide column">
             <div class="ui grid" >
